<resources>
    <string name="app_name">Smart City</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="havent_account">Have\'nt Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="no_hp">No Hp</string>
    <string name="alamat">Alamat</string>
    <string name="gender">Gender</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="password_validation">Password Validation</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_passwordConf">This password is not same</string>
    <string name="select_photo">SELECT PHOTO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
